fixed the about page spacing

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -91,7 +91,7 @@ p.register {
   box-shadow: 0px 17px 10px -10px rgba(0, 0, 0, 0.4);
   transition: all ease-in-out 750ms;
   max-width: 500px;
-  margin: 0 auto;
+  margin: 30px auto;
   width: 60%;
 }
 
@@ -101,8 +101,8 @@ p.register {
 }
 .card-deck {
   margin: 20px auto;
-  width: 70%;
-  max-width: 1000px;
+  width: 100%;
+  max-width: 1200px;
 }
 
 .card-title {
